﻿Subtitle Edit Changelog

3.5.17 (xth September 2020) BETA
* NEW:
   * Add new subtitle format - thx Holmgeir
   * Add shortcuts for Tools menu items Split/Append/Join - thx z3us
   * Add shortcuts for "Merge line with same text/time-code" - thx Mike
   * Add shortcut for File - Compare
   * Add context menu item for "Set default fixes" in FCE
   * Cmd line convert use header from EBU STL file - thx malashin
   * Add "ocrengine" parameter to cmd line convert
   * Add "Export to FCP+image" in OCR window - thx Marko
* IMPROVED:
   * Update Bulgarian translation - thx KalinM
   * Update Hungarian translation - thx Zityi
   * Update Finnish translation - thx Teijo S
   * Update Korean translation - thx domddol
   * Update Polish spell check dictionary - thx borifax
   * Improve support for transport stream in "cmd line convert"
   * Improve support for transport stream in "Batch convert"
   * Improve reading of badly formatted srt files - thx Gordon
   * Show warning when saving DCinema formats in non-utf-8
   * Improve "Import plain text" for small resolutions - thx doquan0
   * Improve end-color-font-tag for EBU 3+ lines
   * Update Finnish spell check to libvoikko 4.3 (2019-11-24)
   * Finnish spell check should now also work on Linux - thx Gitraffe
   * Allow higher (1000) max margin for SSA/ASS thx Looi
* FIXED:
   * Fix for overlap in "Tools -> Adjust durations" - thx Christian
   * Fix some shortcuts being written to text box - thx rebawest
   * Keep bookmarks after edit in source view - thx Ingo
   * Fix syntax coloring after replace - thx OmrSi
   * Fix minor label issue at startup - thx Bill
   * Fix crash on very very long text lines
   * Fix bug in export multi-line-bold/box-for-each-line - thx thehulk
   * Fix bug in export text with font-size - thx thehulk
   * Fix shortcut validation for a few menu items - thx LiMa79#4271
   * Fix web color to hex color in DCinema - thx Antonio
   * Ignore comments (NOTE) in VTT - thx Issity 